@@ -185,6 +185,9 @@ class DjangoClassAlias(pyamf.ClassAlias):
         attrs = pyamf.ClassAlias.getDecodableAttributes(self, obj, attrs, **kwargs)
 
         for n in self.decodable_properties:
+            if n in self.relations:
+                continue
+
             f = self.fields[n]
 
             attrs[f.attname] = self._decodeValue(f, attrs[n])
@@ -246,6 +249,11 @@ def writeDjangoObject(self, obj, *args, **kwargs):
     kls = obj.__class__
 
     s = obj.pk
+
+    if s is None:
+        self.writeNonDjangoObject(obj, *args, **kwargs)
+
+        return
 
     django_objects = getDjangoObjects(context)
 
